--- a/src/component/CarouselComponentStyle.css
+++ b/src/component/CarouselComponentStyle.css
@@ -1,10 +1,11 @@
 .images{
-    margin: 3vh 2.5vw;
+    margin: 15px 1.8vw;
+    /* margin: 0px; */
     /* margin-top: 2vh; */
 }
 
 .images img{
-    height: 30vh;
+    height: 300px;
 }
 
 .carousel .thumb{
