--- a/src/component/CategoryStyles.css
+++ b/src/component/CategoryStyles.css
@@ -7,6 +7,7 @@
     display: inline-flex;
     justify-content: space-around;
     flex-direction: column;
+    align-items: center;
     font-size: x-small;
     text-align: center;
     margin: 0 2vw;
