--- a/src/component/TopDealsStyles.css
+++ b/src/component/TopDealsStyles.css
@@ -1,22 +1,23 @@
-.card{
-    /* background-color: aliceblue; */
+.cards{
     text-align: center;
-    height: 40.5vh;
+    height: 350px;
     margin: 1.2rem 2rem;
     margin-bottom: 2.0rem;
     box-shadow: 0 1px 4px grey;
+    overflow-y: auto;
 }
 
 .deal-header{
     text-align: center;
     display: flex;
+    /* font-size: larger; */
     justify-content: space-between;
-    height: 6vh;
+    height: 40px;
     align-items: center;
 }
 
 .deal-header h5{
-    margin-left: 1rem;
+    margin-left: 10px;
     font-weight: 100;
 }
 
@@ -37,7 +38,7 @@
 
 .all-products{
     display: flex;
-    overflow: auto;
+    /* overflow: auto; */
     justify-content: space-around;
     cursor: default;
 }
@@ -49,7 +50,7 @@ div p{
 
 
 .product img{
-    height: 18vh;
+    height: 300px;
     /* width: 5rem; */
 }
 
@@ -76,7 +77,8 @@ div p{
 }
 
 .product:hover {
-    height: 217px;
+    height: 257px;
     width: 158px;
+    margin: -15px 2px;
     box-shadow: 0 0 2px 1px rgba(37, 38, 38, 0.5);
   }
