--- a/src/component/RecentlyViewedStyles.css
+++ b/src/component/RecentlyViewedStyles.css
@@ -1,27 +1,28 @@
 .containers{
-    /* height: 260px; */
-    width: 265px;
+    width: 240px;
     margin:0 0.5vw;
     /* padding-bottom: 1vh; */
     /* padding-top: 1vh; */
-    margin-right: 1vh;
+    /* margin-right: 1vh; */
     /* box-shadow: 0 0 2px 1px rgba(37, 38, 38, 0.5); */
     margin-bottom: 1vh;
-    /* margin-top: 1vh; */
+    text-align: center;
+    display: flex;
+    flex-direction:column;
+    justify-content: center;
 }
 
 .p-images{
-    height: 200px;
-    width: 146px;
+    height: 210px;
     display: flex;
-    margin: 0 1.2rem;
     justify-content:center;
 }
 
 .p-images img{
     height: 200px;
+    width: 200px;
     /* padding: 0 2.5rem; */
-    object-fit: scale-down;
+    object-fit: contain;
 }
 .p-images p{
     font-size: 1rem;
@@ -43,19 +44,35 @@
 
 .rating{
     background-color: rgb(11, 130, 11);
-    height: 0.9rem;
+    height: 1.5rem;
     border-radius: 4px;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    padding: 2px 2px;
+}
+
+.r-img{
+    margin: 0 2px;
+    height: 13px;
+    width: 13px;
+    background-color: green;
 }
 .total-r{
     color: gray;
 }
-.p-ratting img{
+.fl-image{
     height: 1.2rem;
     width: 4rem;
 }
 
 .all-products{
-    margin-top: 30px;
+    margin: 30px 10px;
+    display: flex;
+    justify-content: left;
+    overflow: auto;
+    z-index: 0;
 }
 
 
@@ -66,5 +83,52 @@
 .containers:hover{
     /* height: 275px; */
     width: 270px;
+    margin: 2px;
     box-shadow: 0 0 2px 1px rgba(37, 38, 38, 0.5);
+}
+.rd-price{
+    display: flex;
+    padding: 0 10px;
+    justify-content: space-around;
+    /* background-color: aqua; */
+    font-size: small;
+}
+
+.rd-off-price{
+    display: flex;
+    margin: 0 4px;
+    width: 100%;
+    /* background-color: antiquewhite; */
+    justify-content: space-around;
+}
+
+.rd-rs-off{
+    display: flex;
+    margin: 2px 10px;
+    /* background-color: azure; */
+    /* width: 80%; */
+    /* justify-content: space-around; */
+    /* margin: 2px; */
+
+}
+
+.rd-off-rs{
+    color: grey;
+    text-decoration: line-through;
+}
+
+.rd-off-p{
+    color: green;
+}
+
+.p-details{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    width: 240px;
+    padding: 0 5px;
+    /* number of lines to show */
+    line-clamp: 2;
+    -webkit-box-orient: vertical;   
 }
