--- a/src/component/TopDealsStyles.css
+++ b/src/component/TopDealsStyles.css
@@ -1,10 +1,10 @@
 .cards{
     text-align: center;
-    height: 350px;
+    /* height: 350px; */
     margin: 1.2rem 2rem;
     margin-bottom: 2.0rem;
     box-shadow: 0 1px 4px grey;
-    overflow-y: auto;
+    /* overflow-y: auto; */
 }
 
 .deal-header{
@@ -14,6 +14,10 @@
     justify-content: space-between;
     height: 40px;
     align-items: center;
+    
+}
+.product-title{
+    margin-bottom: 0px;
 }
 
 .deal-header h5{
@@ -36,11 +40,14 @@
     font-size: x-small;
 }
 
-.all-products{
+.all-products-deal{
     display: flex;
-    /* overflow: auto; */
-    justify-content: space-around;
+    justify-content: space-between;
+    align-items: center;
     cursor: default;
+    height: 300px;
+    margin: 0 5px;
+    overflow-x: auto;
 }
 
 div p{
@@ -50,12 +57,14 @@ div p{
 
 
 .product img{
-    height: 300px;
+    height: 115px;
+    object-fit: contain;
     /* width: 5rem; */
 }
 
 .product-off{
     color: green;
+    margin-bottom: 0px;
 }   
 
 .product-brand{
@@ -64,21 +73,21 @@ div p{
 .product{
     text-align: center;
     margin-right: 1rem 2rem;
-    margin-top: 1vh;
-    width: 150px;
+    margin-top: 2px;
+    width: 200px;
     margin-left: 1rem;
-    height: 210px;
+    height: 230px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    z-index: 10;
+    /* z-index: 0; */
     margin-bottom: 2px;
 }
 
 .product:hover {
-    height: 257px;
-    width: 158px;
+    height: 270px;
+    /* width: 158px; */
     margin: -15px 2px;
     box-shadow: 0 0 2px 1px rgba(37, 38, 38, 0.5);
   }
